[package]
name = "test-rust-pgsql"
version = "0.1.0"
authors = ["Jeudi Prando Araujo <jeudi.araujo@el.com.br>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'

[dependencies]
tokio = { version = "0.2", features = ["full"] }
tokio-postgres = '0.5.5'
dotenv = '0.15.0'